--- a/index.html
+++ b/index.html
@@ -14,6 +14,63 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <h1>Landing</h1>
+    <header >
+        <div class="container">
+            <div class="logo">
+                <h4><i class='bx bxs-shopping-bags'></i> President <span>Hyper</span></h4>
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#categories">Categories</a>
+                    </li>
+                    <li>
+                        <a href="#products">Best Deals</a>
+                    </li>
+                    <li>
+                        <a href="#about">About Us</a>
+                    </li>
+                </ul>
+                <a href="./registration.html" class="primary-btn">Register now</a>
+            </nav>
+            <nav class="mobile-nav">
+                <ul>
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#categories">Categories</a>
+                    </li>
+                    <li>
+                        <a href="#products">Best Deals</a>
+                    </li>
+                    <li>
+                        <a href="#about">About Us</a>
+                    </li>
+                </ul>
+                <a href="./registration.html" class="primary-btn">Register now</a>
+            </nav>
+            <div class="menu">
+                <button id="menu-btn">
+                    <i class="bx bx-menu"></i>
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <!-- banner -->
+    <section id="home"></section>
+    <!-- Popular Categories -->
+    <section id="categories"></section>
+    <!-- Products -->
+    <section id="Shop"></section>
+    <!-- Subscribe -->
+    <section id="subscribe"></section>
+    <footer></footer>
+
+    <script src="./JS/header.js"></script>
 </body>
 </html>
