--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,8 +14,9 @@
     <!-- Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
-    <header >
+    <header>
         <div class="container">
             <div class="logo">
                 <h4><i class='bx bxs-shopping-bags'></i> President <span>Hyper</span></h4>
@@ -62,7 +64,45 @@
     </header>
 
     <!-- banner -->
-    <section id="home"></section>
+    <section id="home">
+        <div class="slide-container">
+            <div class="slide">
+                <img src="./assets/fresh produce.jpg">
+                <div class="overlay"></div>
+                <div class="text">
+                    <h2>Fresh Produce Daily</h2>
+                    <p>Experience the freshest fruits and veggies at President Hyper</p>
+                    <a class="primary-btn" href="./registration.html">Shop now!</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="./assets/pastry.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="text">
+                    <h2>Fast & Reliable Delivery</h2>
+                    <p>Get your groceries delivered to your doorstep in no time!</p>
+                    <a class="primary-btn" href="./registration.html">Shop now!</a>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="./assets/easy shopping.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="text">
+                    <h2>Exclusive Member Deals</h2>
+                    <p>Unlock amazing discounts and special offers just for you!</p>
+                    <a class="primary-btn" href="./registration.html">Shop now!</a>
+                </div>
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </div>
+        <div class="dot-container">
+            <span class="dot" onclick="currentSlide(1)"></span> 
+            <span class="dot" onclick="currentSlide(2)"></span> 
+            <span class="dot" onclick="currentSlide(3)"></span> 
+          </div>
+    </section>
     <!-- Popular Categories -->
     <section id="categories"></section>
     <!-- Products -->
@@ -72,5 +112,7 @@
     <footer></footer>
 
     <script src="./JS/header.js"></script>
+    <script src="./JS/banner.js"></script>
 </body>
+
 </html>
