feature: created a category section

--- a/index.html
+++ b/index.html
@@ -93,8 +93,6 @@
                     <a class="primary-btn" href="./registration.html">Shop now!</a>
                 </div>
             </div>
-            <a class="prev" onclick="plusSlides(-1)">❮</a>
-            <a class="next" onclick="plusSlides(1)">❯</a>
 
         </div>
         <div class="dot-container">
@@ -104,7 +102,13 @@
           </div>
     </section>
     <!-- Popular Categories -->
-    <section id="categories"></section>
+    <section id="categories">
+        <h2>Popular Categories</h2>
+        <p>Here are some of our most purchased categories</p>
+        <div class="container">
+            
+        </div>
+    </section>
     <!-- Products -->
     <section id="Shop"></section>
     <!-- Subscribe -->
@@ -113,6 +117,7 @@
 
     <script src="./JS/header.js"></script>
     <script src="./JS/banner.js"></script>
+    <script type="module" src="./JS/category.js"></script>
 </body>
 
 </html>
