feature: Created the Shop section

--- a/index.html
+++ b/index.html
@@ -111,7 +111,22 @@
     </section>
     
     <!-- Products -->
-    <section id="Shop"></section>
+    <section id="Shop">
+        <h2>Shop</h2>
+        <p>Our most popular shopped products</p>
+        <div class="products-header">
+            <h3>Daily Necessities</h3>
+            <a href="#">View all</a>
+        </div>
+        <div class="daily-container">
+        </div>
+        <div class="products-header">
+            <h3>Bakery</h3>
+            <a href="#">View all</a>
+        </div>
+        <div class="bakery-container">
+        </div>
+    </section>
     <!-- Subscribe -->
     <section id="subscribe"></section>
     <footer></footer>
