--- a/index.html
+++ b/index.html
@@ -30,13 +30,19 @@
                         <a href="#categories">Categories</a>
                     </li>
                     <li>
-                        <a href="#products">Best Deals</a>
+                        <a href="#products">Shop Now</a>
                     </li>
                     <li>
-                        <a href="#about">About Us</a>
+                        <a href="#contact">Contact Us</a>
                     </li>
                 </ul>
-                <a href="./registration.html" class="primary-btn">Register now</a>
+                <div class="separator"></div>
+                <div class="buttons">
+                    <a href="./registration.html" class="register">Sign up</a>
+                    <a href="./login.html" class="login">Login</a>
+                    <div class="separator"></div>
+                    <a href="./cart.html" class="cart"><i class="bx bx-cart"></i> <span class="counter">0</span></a>
+                </div>
             </nav>
             <nav class="mobile-nav">
                 <ul>
@@ -56,6 +62,7 @@
                 <a href="./registration.html" class="primary-btn">Register now</a>
             </nav>
             <div class="menu">
+                <a href="./cart.html" class="cart"><i class="bx bx-cart"></i> <span class="counter">0</span></a>
                 <button id="menu-btn">
                     <i class="bx bx-menu"></i>
                 </button>
@@ -129,8 +136,88 @@
     </section>
     <!-- Subscribe -->
     <section id="subscribe"></section>
-    <footer></footer>
-
+    <footer>
+        <div class="container">
+            <div class="contact">
+                <h4>Contact</h4>
+                <ul>
+                    <li>
+                        <i class="bx bxs-phone"></i>
+                        <p>
+                            Phone: +12 803 456 7890
+                        </p>
+                    </li>
+                    <li>
+                        <i class="bx bxs-location-plus"></i>
+                        <p>
+                            Address: 67 Kepisi Rd, Mamelodi, Pretoria, 0002, South Africa
+                        </p>
+                    </li>
+                    <li>
+                        <i class="bx bxs-envelope"></i>
+                        <p>
+                            Email: info@presidenthyper.co.za
+                        </p>
+                    </li>
+                    <li></li>
+                </ul>
+            </div>
+            <div class="information">
+                <h4>Information</h4>
+                <ul>
+                    <li>
+                        <a href="./aboutUs.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="./contactUs.html">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="./faq.html">FAQ</a>
+                    </li>
+                    <li>
+                        <a href="#">Special Products</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="category">
+                <h4>Categories</h4>
+                <ul>
+                    <li>
+                        <a href="#">Fruits</a>
+                    </li>
+                    <li>
+                        <a href="#">Soft Drinks</a>
+                    </li>
+                    <li>
+                        <a href="#">Bread & Bakery</a>
+                    </li>
+                    <li>
+                        <a href="#">Sweets</a>
+                    </li>
+                    <li>
+                        <a href="#">Vegetables</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="profile">
+                <h4>My Profile</h4>
+                <ul>
+                    <li>
+                        <a href="#">Create Account</a>
+                    </li>
+                    <li>
+                        <a href="#">Login</a>
+                    </li>
+                    <li>
+                        <a href="#">My Cart</a>
+                    </li>
+                    <li>
+                        <a href="#">Find a Store</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <script src="./JS/header.js"></script>
     <script src="./JS/banner.js"></script>
     <script type="module" src="./JS/category.js"></script>
