feature: created subscribe section

--- a/index.html
+++ b/index.html
@@ -103,20 +103,20 @@
 
         </div>
         <div class="dot-container">
-            <span class="dot" onclick="currentSlide(1)"></span> 
-            <span class="dot" onclick="currentSlide(2)"></span> 
-            <span class="dot" onclick="currentSlide(3)"></span> 
-          </div>
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
     </section>
     <!-- Popular Categories -->
     <section id="categories">
         <h2>Popular Categories</h2>
         <p>Here are some of our most purchased categories</p>
         <div class="container">
-            
+
         </div>
     </section>
-    
+
     <!-- Products -->
     <section id="Shop">
         <h2>Shop</h2>
@@ -135,7 +135,16 @@
         </div>
     </section>
     <!-- Subscribe -->
-    <section id="subscribe"></section>
+    <section id="subscribe">
+        <div class="container">
+            <h2>Stay updated with our latest deals!</h2>
+            <p>Subscribe to our newsletter to get notified about our latest deals and offers!</p>
+            <div class="form">
+                <input type="text" placeholder="Email Address">
+                <button class="primary-btn">Subscribe</button>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="container">
             <div class="contact">
